--- a/Feedbacksystem/templates/pages/facultylogin.html
+++ b/Feedbacksystem/templates/pages/facultylogin.html
@@ -27,7 +27,7 @@
         <div class="form-container sign-up" {% if request.POST and 'register' in request.POST %} id="active" {% endif %}>
             <form method="POST" action="">
     
-                <br>
+                
                 {% csrf_token %}
                 {{ registration_form.as_p }}
                 
@@ -38,8 +38,8 @@
         <div class="form-container sign-in" {% if request.POST and 'login' in request.POST %} id="active" {% endif %}>
             <form method="POST" action="">
                 <h1>CvSU</h1>
-                <h5>Feedback and Evaluation System</h5>
-                <h5>Faculty Login</h5>
+                <h5 class="center">Feedback and Evaluation System</h5>
+                <h5 class="center">Faculty Login</h5>
               
                 {% csrf_token %}
                 {{ login_form.as_p }}
@@ -60,31 +60,31 @@
         <div class="toggle-container">
             <div class="toggle">
                 <div class="toggle-panel toggle-left">
-                    <div style="padding: 10px;">
+                    <div>
                     <h1>Creating Account</h1>
-                    <br>
+                    
                   <ul>
                     <li>Provide the requested information to register</li>
-                    <br>
+                    
                     <li>Make sure to enter valid email and password</li>
-                    <br>
+                    
                     <li>Information must match our record</li>
 
                   </ul>
                 </div>
-                <br>
+                
                     <button class="hidden" id="login">Sign In</button>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Trouble logging into your account?</h1>
-                    <br>
+                    
                    <ul>
                     <li>Make sure to enter valid email and password</li>
-                    <br>
+                    
                     <li>Information must match our record</li>
-                    <br>
+                    
                     <li>Account must be activated</li>
-                    <br>
+                    
                    </ul>
                   
                     <button class="hidden" id="register">REGISTER</button>
