--- a/Feedbacksystem/templates/pages/adminlogin.html
+++ b/Feedbacksystem/templates/pages/adminlogin.html
@@ -12,6 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
   <link rel="stylesheet" href="{% static 'css/login.css'%}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
     input[type="submit"] {
       background-color: #f7b205; 
@@ -34,12 +35,12 @@
    
 <form method="POST" action="">
     {% csrf_token %}
-    <a style = "margin-right: 20px;" href = "{% url 'signin' %}"> <- Back to Student Login </a> 
+    <a  class="admin"  style="margin-right: 1em;"href = "{% url 'signin' %}"> <i class="bi bi-arrow-return-left"></i> Back to Student Login </a> 
     <label id ="admin">Admin Username:</label>
     <input class="admininput" type = "text" name="username" placeholder="Enter Admin Username">
     <label id ="admin">Admin Password:</label>
     <input class="admininput" type = "password" name="password" placeholder="Enter Admin Password">
-<input  type = "submit" value="Submit" style="font-weight: bold;"> 
+    <input   class="admininput" type = "submit" value="Submit" style="font-weight: bold;"> 
 
 </form>
 </div>
