student page made responsive

--- a/Feedbacksystem/templates/pages/contactUs.html
+++ b/Feedbacksystem/templates/pages/contactUs.html
@@ -3,18 +3,56 @@
 {% block title %}Contact Us{% endblock %}
 
 {% block header %}
-
+<div class="container">
     <h2> Contact Us</h2>
     <hr>
    
 {% endblock header %}
 <hr>
 {% block feature %}
-<div class="container" style="white-space: pre;">
-Location: Soldiers Hills IV, Molino VI, Bacoor City, Cavite
-Email: cvsubacoor@cvsu.edu.ph
-Call: (046) 476-5029
-Website: <a href="https://cvsu.edu.ph/bacoor/">https://cvsu.edu.ph/bacoor/</a>
-Facebook: <a href="https://www.facebook.com/CvSUBacoorCityCampus/">https://www.facebook.com/CvSUBacoorCityCampus/</a>
+
+<div class="row">
+    <div class="col-md-8"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3864.2495003722183!2d120.97877457375994!3d14.41277568165026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d22f4810979f%3A0xaf0dae4457b7d498!2sCavite%20State%20University%20-%20Bacoor%20Campus!5e0!3m2!1sen!2sph!4v1722681067578!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+    
+    <div class="col-md-4">
+       
+        <div class="row">
+
+            <div class="col-md-3  col-3 pt-2 mb-2 contact-icon"><i class="bi bi-geo-alt"></i>  </div>
+            <div class="col-md-9  col-9 pt-2 mb-2 ">
+                <h5>Address</h5>
+                <p>Soldiers Hills IV, Molino VI, Bacoor City, Cavite</p>
+            </div>
+          
+        </div>
+        <div class="row">
+
+            <div class="col-md-3 col-3 pt-2 mb-2 contact-icon  "><i class="bi bi-telephone"></i>  </div>
+            <div class="col-md-9 col-9 pt-2 mb-2 ml-2" >
+                <h5>Contact</h5>
+                <p>Registrar: (046) 476-5029</p>
+            </div>
+          
+        </div>
+        <div class="row">
+
+            <div class="col-md-3 col-3 pt-3 mb-2 contact-icon " ><i class="bi bi-envelope"></i>  </div>
+            <div class="col-md-9 col-9 pt-3 mb-2 ">
+                <h5>Email</h5>
+                <p>cvsubacoor@cvsu.edu.ph</p>
+            </div>
+          
+        </div>
+          
+        <div>
+            
+        </div>
+        <!-- Email: cvsubacoor@cvsu.edu.ph
+        Website: <a href="https://cvsu.edu.ph/bacoor/">https://cvsu.edu.ph/bacoor/</a>
+       
+        Facebook: <a href="https://www.facebook.com/CvSUBacoorCityCampus/">https://www.facebook.com/CvSUBacoorCityCampus/</a> -->
+    </div>
+</div>
 </div>
 {% endblock feature %}
+<!-- Location: Soldiers Hills IV, Molino VI, Bacoor City, Cavite -->
