--- a/Feedbacksystem/templates/pages/school_event_form.html
+++ b/Feedbacksystem/templates/pages/school_event_form.html
@@ -36,7 +36,7 @@
         {{ form.suggestions_and_comments }}
     </div>    
     <br>
-    <button type="submit" class="btn btn-warning">Submit</button>
+    <button type="submit" class="btn btn-warning custom-btn">Submit</button>
     </form>
    </div>
     {% endblock feature %}
