--- a/Feedbacksystem/templates/pages/home.html
+++ b/Feedbacksystem/templates/pages/home.html
@@ -13,6 +13,8 @@
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
   <link rel="stylesheet" href="{% static 'css/student.css'%}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   
 
@@ -20,32 +22,35 @@
 
 <body>
   <div class="container-fluid" style="padding: 0;">
-    <div style="display: flex; align-items: center; background-color: #2a9134; margin: 0; width: 100%; height: 20vh;">
+    <div class="header">
+      <button id="sidebarCollapse" class="btn">
+        <span class="material-symbols-outlined">
+          menu
+          </span>
+    </button>
         <a class="navbar-brand" style="color: #fafafa;" href="{% url 'home' %}" id="headerlogo">
-            <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="80px" height="80px" id="cvsulogo"> Feedback and Evaluation System 
-            <div class="subtitle">Cavite State University - Bacoor Campus</div>
+            <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="70px" height="70px" id="cvsulogo"> 
+            
         </a>
-        <div style="margin-left: 43em;">
+        <div class="title-container">
+          <div class="header-title">Feedback and Evaluation System </div>
+          <div class="subtitle">Cavite State University - Bacoor Campus</div>
+        </div>
+        <div class="profile-pic">
           {% if student.profile_picture %}
-          <img src="{{ student.profile_picture.url }}" alt="Profile Picture" width="60" style=" border-radius: 50%;">
+          <img src="{{ student.profile_picture.url }}" alt="Profile Picture" width="60" style=" border-radius: 50%; margin-right: 1em;">
           {% else %}
           <img src="{% static 'images/Default_avatar.webp' %}" alt="Default Profile Picture" width="60" style="margin-right: 1em; border-radius: 50%;" >
           {% endif %}
-            <a href="{% url 'student_profile' %}" style="font-weight: 500;"> <p id="profile_name" style="color: #fafafa; display: inline-block;">{{ student.first_name }} {{ student.last_name }}</p> </a>
+            <a href="{% url 'student_profile' %}"><p id="profile_name" style="color: #fafafa;">{{ student.first_name }} {{ student.last_name }}</p> </a>
         </div>
     </div>
 </div>
-</div>
-</nav>
-  <div class="container-fluid">
-  <div class="row">
-    <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar lightsidebar"> 
+    <nav id="sidebar" class="sidebar lightsidebar"> 
       <ul class="nav flex-column nav-pills">
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/home' %} active {% endif %}" href="/home">
-            <i class="bi bi-house-fill"></i> <b>HOME</b>    
-        
-        
+            <i class="bi bi-house-fill"></i> <b>HOME</b>     
         </a>
       </li>
        
@@ -80,10 +85,8 @@
       </li>
     </ul>
   </nav>
-  <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+  <main role="main" class="content">
     <!-- Main content area -->
-    
-    <div class="container" style="padding:10px; margin-top:10px;">
       {% block header %}
     <div id="eval" class = "container">
       <h3>Academic Year: {{ evaluation_status.academic_year }}</h3>
@@ -93,16 +96,13 @@
     {% endblock header %}
    
     {% block feature %}
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10 offset-md-1">
+    <div class="container-fluid">
+     
           <h2 class="text-center mt-4 mb-4" style="color: darkgreen">Latest News and Announcements</h2>
-    
-    
-    
+
           <div class="card mb-4">
             <div class="card-body">
-              <h3 class="card-title" style="color: darkgreen">𝐀𝐓𝐓𝐄𝐍𝐓𝐈𝐎𝐍, 𝐒𝐓𝐈𝐍𝐆𝐑𝐀𝐘𝐒!</h3>
+              <h2 class="card-title" style="color: darkgreen">𝐀𝐓𝐓𝐄𝐍𝐓𝐈𝐎𝐍, 𝐒𝐓𝐈𝐍𝐆𝐑𝐀𝐘𝐒!</h2>
               <p class="card-text">Date: 𝐃𝐞𝐜𝐞𝐦𝐛𝐞𝐫 𝟏𝟐, 𝟐𝟎𝟐𝟑</p>
               <p class="card-text">Excitement is building up for the 𝐆𝐚𝐰𝐚𝐝 𝐏𝐚𝐫𝐚𝐧𝐠𝐚𝐥 𝐁𝐚𝐭𝐜𝐡 𝟐𝟎𝟐𝟐-𝟐𝟎𝟐𝟑 at 𝐂𝐯𝐒𝐔 - 𝐁𝐚𝐜𝐨𝐨𝐫 𝐂𝐢𝐭𝐲 𝐂𝐚𝐦𝐩𝐮𝐬! Save the date: 𝐃𝐞𝐜𝐞𝐦𝐛𝐞𝐫 𝟏𝟐, 𝟐𝟎𝟐𝟑. Calling all top-performing students - this is your moment! 🌟 Be recognized for your outstanding achievements.
                 𝐏𝐋𝐄𝐀𝐒𝐄 𝐁𝐄 𝐆𝐔𝐈𝐃𝐄𝐃 𝐀𝐂𝐂𝐎𝐑𝐃𝐈𝐍𝐆𝐋𝐘!</p>
@@ -111,7 +111,7 @@
     
           <div class="card mb-4">
             <div class="card-body">
-              <h3 class="card-title" style="color: darkgreen">Exciting Event Coming Up!</h3>
+              <h2 class="card-title" style="color: darkgreen">Exciting Event Coming Up!</h2>
               <p class="card-text">Date: 𝐍𝐨𝐯𝐞𝐦𝐛𝐞𝐫 𝟐𝟗, 𝟐𝟎𝟐𝟑 (𝐖𝐞𝐝𝐧𝐞𝐬𝐝𝐚𝐲)</p>
               <p class="card-text">𝐓𝐡𝐞 𝐎𝐟𝐟𝐢𝐜𝐞 𝐨𝐟 𝐭𝐡𝐞 𝐂𝐚𝐦𝐩𝐮𝐬 𝐀𝐝𝐦𝐢𝐧𝐢𝐬𝐭𝐫𝐚𝐭𝐨𝐫 𝐡𝐚𝐬 𝐫𝐞𝐥𝐞𝐚𝐬𝐞𝐝 𝐭𝐡𝐞 𝐎𝐟𝐟𝐢𝐜𝐞 𝐌𝐞𝐦𝐨. 𝐍𝐨. 𝟑𝟐, 𝐬. 𝟐𝟎𝟐𝟑 𝐫𝐞𝐠𝐚𝐫𝐝𝐢𝐧𝐠 𝐭𝐡𝐞 𝐀𝐭𝐭𝐞𝐧𝐝𝐚𝐧𝐜𝐞 𝐭𝐨 𝐎𝐫𝐢𝐞𝐧𝐭𝐚𝐭𝐢𝐨𝐧/𝐑𝐞-𝐎𝐫𝐢𝐞𝐧𝐭𝐚𝐭𝐢𝐨𝐧 𝐂𝐮𝐦 𝐂𝐚𝐩𝐚𝐛𝐢𝐥𝐢𝐭𝐲 𝐄𝐧𝐡𝐚𝐧𝐜𝐞𝐦𝐞𝐧𝐭 𝐟𝐨𝐫 𝐅𝐚𝐜𝐮𝐥𝐭𝐲.
                 Whereas, the 𝐇𝐮𝐦𝐚𝐧 𝐑𝐞𝐬𝐨𝐮𝐫𝐜𝐞 will sponsor an orientation/re-orientation program for all CvSU-Bacoor City Campus employees and Capability Enhancement for Faculty on 𝐍𝐨𝐯𝐞𝐦𝐛𝐞𝐫 𝟐𝟗, 𝟐𝟎𝟐𝟑 (𝐖𝐞𝐝𝐧𝐞𝐬𝐝𝐚𝐲) 𝐟𝐫𝐨𝐦 𝟕:𝟑𝟎 𝐚𝐦-𝟓:𝟎𝟎 𝐩𝐦 𝐚𝐭 𝐭𝐡𝐞 𝐒𝐚𝐭𝐢𝐬 𝐏𝐥𝐚𝐜𝐞 𝐚𝐧𝐝 𝐏𝐚𝐫𝐭𝐲 𝐕𝐞𝐧𝐮𝐞, 𝐁𝐚𝐡𝐚𝐲𝐚𝐧𝐠 𝐏𝐚𝐠-𝐀𝐬𝐚, 𝐌𝐨𝐥𝐢𝐧𝐨 𝐕, 𝐁𝐚𝐜𝐨𝐨𝐫 𝐂𝐢𝐭𝐲, 𝐂𝐚𝐯𝐢𝐭𝐞.
@@ -123,7 +123,7 @@
     
           <div class="card mb-4">
             <div class="card-body">
-              <h3 class="card-title" style="color: darkgreen">𝐀𝐓𝐓𝐄𝐍𝐓𝐈𝐎𝐍 𝐆𝐑𝐀𝐃𝐔𝐀𝐓𝐈𝐍𝐆 𝐒𝐓𝐔𝐃𝐄𝐍𝐓𝐒! </h3>
+              <h2 class="card-title" style="color: darkgreen">𝐀𝐓𝐓𝐄𝐍𝐓𝐈𝐎𝐍 𝐆𝐑𝐀𝐃𝐔𝐀𝐓𝐈𝐍𝐆 𝐒𝐓𝐔𝐃𝐄𝐍𝐓𝐒! </h2>
               <p class="card-text">Date: 𝗡𝗼𝘃𝗲𝗺𝗯𝗲𝗿 𝟮𝟵, 𝟮𝟬𝟮𝟯</p>
               <p class="card-text">The 𝗢𝗳𝗳𝗶𝗰𝗲 𝗼𝗳 𝗦𝘁𝘂𝗱𝗲𝗻𝘁 𝗔𝗳𝗳𝗮𝗶𝗿𝘀 𝗮𝗻𝗱 𝗦𝗲𝗿𝘃𝗶𝗰𝗲𝘀, in collaboration with 𝗘𝘃𝗲𝗿𝘆 𝗡𝗮𝘁𝗶𝗼𝗻 𝗖𝗮𝗺𝗽𝘂𝘀 (𝗘𝗡𝗖) brings you a 𝗖𝗮𝗿𝗲𝗲𝗿 𝗧𝗮𝗹𝗸 𝗼𝗻 𝗡𝗼𝘃𝗲𝗺𝗯𝗲𝗿 𝟮𝟵, 𝟮𝟬𝟮𝟯, 𝗳𝗿𝗼𝗺 𝟴:𝟯𝟬 𝗔𝗠 𝘁𝗼 𝟭𝟮:𝟬𝟬 𝗡𝗡 at the 𝗖𝘃𝗦𝗨 - 𝗕𝗮𝗰𝗼𝗼𝗿 𝗖𝗶𝘁𝘆 𝗖𝗮𝗺𝗽𝘂𝘀 𝗖𝗼𝘃𝗲𝗿𝗲𝗱 𝗖𝗼𝘂𝗿𝘁.
                 All 4th-year students are required to attend. OJT/Practice Teaching Coordinators, must inform the immediate supervisors of students with ongoing OJT/Practice Teaching. Mark your calendars! 🌟
@@ -134,7 +134,7 @@
     
           <div class="card mb-4">
             <div class="card-body">
-              <h3 class="card-title" style="color: darkgreen">𝗔𝗧𝗧𝗘𝗡𝗧𝗜𝗢𝗡, 𝗦𝗧𝗜𝗡𝗚𝗥𝗔𝗬𝗦!</h3>
+              <h2 class="card-title" style="color: darkgreen">𝗔𝗧𝗧𝗘𝗡𝗧𝗜𝗢𝗡, 𝗦𝗧𝗜𝗡𝗚𝗥𝗔𝗬𝗦!</h2>
               <p class="card-text">Date: 𝗢𝗰𝘁𝗼𝗯𝗲𝗿 𝟮𝟭, 𝟮𝟬𝟮𝟯</p>
               <p class="card-text">𝗧𝗵𝗲 𝗖𝗼𝗻𝗰𝗲𝗿𝗻𝗲𝗱 𝗛𝗼𝗺𝗲𝗼𝘄𝗻𝗲𝗿𝘀 𝗔𝘀𝘀𝗼𝗰𝗶𝗮𝘁𝗶𝗼𝗻 𝗨𝗻𝗶𝗼𝗻 𝗼𝗳 𝗠𝗼𝗹𝗶𝗻𝗼 (𝗖𝗛𝗨𝗠) 𝗜𝗻𝗰. 𝗿𝗲𝗹𝗲𝗮𝘀𝗲𝗱 𝗮 𝗕𝗼𝗮𝗿𝗱 𝗥𝗲𝘀𝗼𝗹𝘂𝘁𝗶𝗼𝗻 𝗡𝗼. 𝟭𝟬-𝟬𝟬𝟵 𝗦𝗲𝗿𝗶𝗲𝘀 𝗼𝗳 𝟮𝟬𝟮𝟯 𝗿𝗲𝗴𝗮𝗿𝗱𝗶𝗻𝗴 𝘁𝗵𝗲 𝗜𝗺𝗽𝗹𝗲𝗺𝗲𝗻𝘁𝗮𝘁𝗶𝗼𝗻 𝗼𝗳 𝗖𝗹𝗲𝗮𝗿𝗶𝗻𝗴 𝗼𝗳 𝗢𝗯𝘀𝘁𝗿𝘂𝗰𝘁𝗶𝗼𝗻 𝗮𝗹𝗼𝗻𝗴 𝗖𝗮𝘃𝗶𝘁𝗲 𝗦𝘁𝗮𝘁𝗲 𝗨𝗻𝗶𝘃𝗲𝗿𝘀𝗶𝘁𝘆 (𝗖𝘃𝗦𝗨) 𝗣𝗿𝗲𝗺𝗶𝘀𝗲𝘀.
                 Whereas, a special meeting was held on 𝗢𝗰𝘁𝗼𝗯𝗲𝗿 𝟮𝟬, 𝟮𝟬𝟮𝟯 where the officers and the board members of CHUM discussed the various obstructions surrounding the Cavite State University-Bacoor City Campus.
@@ -179,7 +179,14 @@
  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
    
-   
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+      $(document).ready(function () {
+          $('#sidebarCollapse').on('click', function () {
+              $('body').toggleClass('sidebar-collapsed');
+          });
+      });
+  </script>
 </body>
 
 </html>
