--- a/Feedbacksystem/templates/pages/student_profile.html
+++ b/Feedbacksystem/templates/pages/student_profile.html
@@ -3,9 +3,6 @@
 {% block title %}Profile{% endblock %}
 
 {% block header %}
-
-    <h2> Profile</h2>
-    <hr>
     {% endblock header %}
     {% block feature %}
     {% if messages %}
@@ -15,54 +12,31 @@
         {% endfor %}
     </ul>
     {% endif %}
-    <div class="container" id="profilecontainer">
-       
-        <div id="profile" class = "container">
-            
+    <div class="container">
+        <div class="row">
+        <div class=" col-lg-3 col-md-4 col-sm-5">
+           <div class="card">
             {% if student.profile_picture %}
-            <img src="{{ student.profile_picture.url }}" alt="Profile Picture" width="150" style="margin-bottom: 2em;">
+            <img src="{{ student.profile_picture.url }}" alt="Profile Picture"  class="card-img-top">
             {% else %}
-            <img src="{% static 'images/Default_avatar.webp' %}" alt="Default Profile Picture" width="150" style="margin-bottom: 2em;" >
+            <img src="{% static 'images/Default_avatar.webp' %}" alt="Default Profile Picture" class="card-img-top" >
             {% endif %}
-            <a class="btn btn-warning" href="{% url 'edit_student_profile' %}" style="display: block; width: 30%; margin-left: 7.4em;"> <i class="bi bi-pencil-square"></i> Edit</a>
-            <table class="table table-responsive " style=>
-            <tr>
-            <th>Student Number: </th>
-            <td>{{ student.student_number }}</td>
-             </tr>
-
-            <tr>
-            <th>Name: </th>
-            <td>{{ student.first_name }} {{ student.last_name }}</td>
-             </tr>
-
-            <tr>
-
-            <th>Email: </th>
-            <td >{{ student.email }} </td>  
-            </tr>
-
-            <tr>
-      
-            <th>Contact Number: </th>
-            <td>{{ student.contact_no }} </td>
-            </tr>
-
-            <tr>
-            <th>Status: </th>
-            <td>{{ student.status }} </td>
-             </tr>
-             
-            <tr>
-            <th>Section: </th>
-            <td>{{ student.Section }}</td>
-             </tr>
-            
-            </table>
-            
-            
-           </div>
-        <div class="tablecontainer" style="display: inline-block; margin-left: 20px; width: 700px;">
+            <div class="button-container">
+                <button class="btn btn-warning btn-block custom-btn" style="border-radius: 0; "><a  href="{% url 'edit_student_profile' %}" style="color: inherit;"> <i class="bi bi-pencil-square"></i> Edit</a></button>
+                </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><b>Student Number: </b>{{ student.student_number }}</li>
+              <li class="list-group-item"><b>Name: </b>{{ student.first_name }} {{ student.last_name }}</li>
+              <li class="list-group-item"><b>Email: </b>{{ student.email }}</li>
+              <li class="list-group-item"><b>Contact Number: </b>{{ student.contact_no }}</li>
+              <li class="list-group-item"><b>Status: </b>{{ student.status }}</li>
+              <li class="list-group-item"><b>Year & Section: </b>{{ student.Section }}</li>
+              
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-9 col-md-8 col-sm-7">
+        <div class="tablecontainer">
            <table class="table table-bordered table-responsive ">
             <tr>
             <th  scope="col" style="color:#fafafa; background: #2a9134">Subject</th>
@@ -84,5 +58,8 @@
         {% endfor %}
     
     </table>
+    </div>
+    </div>
+    </div>
     {% endblock feature %}
 
