faculty page now responsive

--- a/Feedbacksystem/templates/pages/faculty_events.html
+++ b/Feedbacksystem/templates/pages/faculty_events.html
@@ -3,48 +3,117 @@
 {% block title %}Events{% endblock %}
 
 {% block header %}
-
-    <h2> Events </h2>
-    <hr>
     {% endblock header %}
     {% block feature %}
-    <a class = "btn btn-warning" href = "{% url 'event_creation_form' %}"> <i class="bi bi-plus-square-fill"> </i>Create an Event </a>
-    
-    <table class="table table-striped table-bordered table-responsive  " style="margin-top: 1em;">
-        <tr>
-            <th  scope="col" class="bg-success">TITLE</th>
-            <th  scope="col" class="bg-success">DATE</th>
-            <th  scope="col" class="bg-success">TIME</th>
-            <th  scope="col" class="bg-success">LOCATION</th>
-            <th  scope="col" class="bg-success">EVENT TYPE </th>
-            <th  scope="col" class="bg-success">COURSE/DEPARTMENT ATTENDEES</th>
-            <th  scope="col" class="bg-success">DESCRIPTION</th>
-            <th  scope="col" class="bg-success">OPTIONS </th>
-        </tr>
-        {% for i in event %}
-        <tr>
-            <td>{{ i.title }}</td>
-            <td>{{ i.date }}</td>
-            <td>{{ i.time }}</td>
-            <td>{{ i.location }}</td>
-            <td>{{ i.event_type }}</td>
-            <td>
-                {% for course in i.course_attendees.all %}
-                    {{ course.name }}{% if not forloop.last %}, {% endif %}
-                {% endfor %}
-                <br>
-                {% for department in i.department_attendees.all %}
-                    {{ department.name }}{% if not forloop.last %}, {% endif %}
-                {% endfor %}
-            </td>
-            <td>{{ i.description }}</td>
-            <td><a class="nav-link" href="{% url 'faculty_event_evaluations' %}"><b>VIEW</b> <a class="nav-link" href="{}"><b>EDIT</b><a class="nav-link" href="{}"><b>DELETE</b></a></td>
-    
-        </tr>
-    
-        {% endfor %}
-    
-
-
+    <div class="table-responsive">
+        <a class = "btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" href = "{% url 'event_creation_form' %}"> <i class="bi bi-plus-square-fill"> </i>Create Event </a>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Create Event</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form method="post" action="" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-group">
+                {{ form.title.label_tag }}
+                {{ form.title }}
+                </div>
+                <div class="form-group">
+                {{ form.date.label_tag }}
+                {{ form.date }}
+                </div>
+                <div class="form-group">
+                {{ form.time.label_tag }}
+                {{ form.time }}
+                </div>
+                <div class="form-group">
+                {{ form.location.label_tag }}
+                {{ form.location }}
+                </div>
+                <div class="form-group">
+                {{ form.event_type.label_tag }}
+                {{ form.event_type }}
+                </div>
+                <div class="form-group">
+                {{ form.event_picture.label_tag }}
+                {{ form.event_picture }}
+                </div>
+                <div class="form-group">
+                {{ form.description.label_tag }}
+                {{ form.description }}
+                </div>
+            
+                
+                <div class="form-group">
+                    {{ form.course_attendees.label_tag }}
+                    <div class="checkbox-list">
+                        {% for course in form.course_attendees %}
+                            <div class="form-check">
+                                {{ course }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="form-group">
+                    {{ form.department_attendees.label_tag }}
+                    <div class="checkbox-list">
+                        {% for department in form.department_attendees %}
+                            <div class="form-check">
+                                {{ department }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+               
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn custom-btn"">Create Event</button>
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
+        <table class="table table-bordered" style="margin-top: 1em;">
+            <tr>
+                <th  scope="col">TITLE</th>
+                <th  scope="col">DATE</th>
+                <th  scope="col">TIME</th>
+                <th  scope="col">LOCATION</th>
+                <th  scope="col">EVENT TYPE </th>
+                <th  scope="col">COURSE/DEPARTMENT ATTENDEES</th>
+                <th  scope="col">DESCRIPTION</th>
+                <th  scope="col">OPTIONS </th>
+            </tr>
+            {% for i in event %}
+            <tr>
+                <td>{{ i.title }}</td>
+                <td>{{ i.date }}</td>
+                <td>{{ i.time }}</td>
+                <td>{{ i.location }}</td>
+                <td>{{ i.event_type }}</td>
+                <td>
+                    {% for course in i.course_attendees.all %}
+                        {{ course.name }}{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                    <br>
+                    {% for department in i.department_attendees.all %}
+                        {{ department.name }}{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </td>
+                <td>{{ i.description }}</td>
+                <td style="display: flex; align-items: center; justify-content: center;flex-direction: row; gap:1em; margin-top: 0.4em;"> <a href="{% url 'faculty_event_evaluations'%}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i> </button></a> <a href="{% url 'editteacher'  i.pk  %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
+                    <a href="{% url 'deleteTeacher'  i.pk  %}"><button class="btn btn-danger" ><i style="font-size:15px" class="bi bi-trash" ></i></button></a>
+                  </td>
+        
+                  {% endfor %}
+            </tr>
+       </table>
+       </div>   
     {% endblock feature %}
 
