--- a/Feedbacksystem/templates/pages/view_evaluation_form.html
+++ b/Feedbacksystem/templates/pages/view_evaluation_form.html
@@ -13,8 +13,8 @@
 
 <table class="table table-responsive " >
         <tr>
-         <th  scope="col" class="bg-success">I. SUBJECT MATTER CONTENT </th>
-         <th  scope="col" class="bg-success">RATING</th>
+         <th  scope="col" style="background-color: #2a9134;">I. SUBJECT MATTER CONTENT </th>
+         <th  scope="col" style="background-color: #2a9134;">RATING</th>
     </tr>
     </thead>
     <tr>
@@ -42,8 +42,8 @@
     </tr>
     
     <tr>
-        <th  scope="col" class="bg-success">II. ORGANIZATION  </th>
-        <th  scope="col" class="bg-success">RATING</th>
+        <th  scope="col" style="background-color: #2a9134;">II. ORGANIZATION  </th>
+        <th  scope="col" style="background-color: #2a9134;">RATING</th>
     </tr>
     <tr>
         <td>Organizes the subject matter</td>
@@ -68,8 +68,8 @@
     </tr>
     
     <tr>      
-        <th  scope="col" class="bg-success">III. TEACHER-STUDENT RAPPORT </th>
-        <th  scope="col" class="bg-success">RATING</th> 
+        <th  scope="col" style="background-color: #2a9134;">III. TEACHER-STUDENT RAPPORT </th>
+        <th  scope="col" style="background-color: #2a9134;">RATING</th> 
     </tr>
   
     <tr>
@@ -96,8 +96,8 @@
     </tr>
 
     <tr>
-        <th  scope="col" class="bg-success">IV. TEACHING METHODS</th>
-        <th  scope="col" class="bg-success">RATING</th>
+        <th  scope="col" style="background-color: #2a9134;">IV. TEACHING METHODS</th>
+        <th  scope="col" style="background-color: #2a9134;">RATING</th>
       
         
        
@@ -129,8 +129,8 @@
     </tr>
     
     <tr>
-        <th  scope="col" class="bg-success">VI. CLASSROOM MANAGEMENT</th>
-        <th  scope="col" class="bg-success">RATING</th>
+        <th  scope="col" style="background-color: #2a9134;">VI. CLASSROOM MANAGEMENT</th>
+        <th  scope="col" style="background-color: #2a9134;">RATING</th>
       
         
        
@@ -166,8 +166,8 @@
     </tr>
     
     <tr>
-        <th  scope="col" class="bg-success">VII. SENSITIVITY and SUPPORT to STUDENTS</th>
-        <th  scope="col" class="bg-success">RATING</th>
+        <th  scope="col" style="background-color: #2a9134;">VII. SENSITIVITY and SUPPORT to STUDENTS</th>
+        <th  scope="col" style="background-color: #2a9134;">RATING</th>
     
     </tr>
   
@@ -196,8 +196,8 @@
         <td>{{ faculty_evaluation_form.extends_consideration_to_students }}</td>
     </tr>
     <tr>
-        <th  scope="col" class="bg-success">Other Suggestions for Improvement:</th>
-        <th  scope="col" class="bg-success">Comments</th> 
+        <th  scope="col" style="background-color: #2a9134;">Other Suggestions for Improvement:</th>
+        <th  scope="col" style="background-color: #2a9134;">Comments</th> 
     </tr>
     <tr>
         <td>The course should:
