--- a/Feedbacksystem/templates/pages/view_schoolevent_evaluations.html
+++ b/Feedbacksystem/templates/pages/view_schoolevent_evaluations.html
@@ -11,10 +11,10 @@
 <hr>
 {% block feature %}
 
-<table class="table table-responsive " >
+<table class="table table-responsive">
         <tr>
-         <th  scope="col" class="bg-success">I.  OVERALL EVALUATION </th>
-         <th  scope="col" class="bg-success">RATING</th>
+         <th  scope="col">I.  OVERALL EVALUATION </th>
+         <th  scope="col">RATING</th>
     </tr>
     </thead>
     <tr>
