--- a/Feedbacksystem/static/css/facultypage.css
+++ b/Feedbacksystem/static/css/facultypage.css
@@ -1,105 +1,247 @@
-
-#headerbar{
-    padding: 10px;
-    background-color: #2a9134;
-    
- 
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body{
+  overflow-y: hidden; /* Hide scrollbar for sidebar */
+  scroll-behavior: smooth;
+}
+th{
+  color: #ffffff !important; 
+  background-color: #2a9134 !important;
+}
+.table-responsive td, th {
+  vertical-align: middle; /* Center content vertically */
+  padding: 10px;
+}
+.header{
+  display: flex;
+  align-items: center; 
+  background: linear-gradient(to right, #2a9134 1%, #3fa34d 53%, #2a9134 100%);
+  width:100%;
+  padding: 0;
+  position: fixed;
+  z-index: 99;
+  top: 0;
 }
 #headerlogo{
-    font-size: 24px;
-    cursor: pointer;
-    font-weight: bold;
-    text-transform: uppercase;
-  margin-left: 50px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-left: 4rem;
+}
+.title-container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  font-size: 1.2rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.header-title{
+  display: inline-block;
+  color:white;  
+  font-weight: bold;
+  text-transform: uppercase;
+  }
+.subtitle{
+  color:white;  
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1rem; 
 }
 
 a{
   color: black;
   text-decoration: none;
-
+}
+.profile-pic{
+  width: 100%;
+  margin-right: 1.5em;
+  padding-right: 1.5em;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 #profile_name:hover{
   text-decoration: underline;
 }
 a:hover {
-
   cursor: pointer;
 }
 #cvsulogo{
-    margin-right: 20px;
-}
-.subtitle{
-    font-size: 14px;
-    margin-left: 90px;
-
+  margin-right: 1.55rem;
 }
 main {
-  height: calc(80vh); /* Adjust to leave space for padding */
+  height: calc(90vh); /* Adjust to leave space for padding */
   overflow-y: auto; /* Add a vertical scrollbar when content overflows */
+  margin-top: 4rem;
 }
 #sidebar.lightsidebar {
   background-color: #fafafa;
-  box-sizing: border-box;
   box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.2);
-  max-height: 200%;
-  min-height: 80vh;
   overflow-y: hidden; /* Hide scrollbar for sidebar */
+  transition: all 0.3s;
+  width: 200px;
+  position: fixed;
+  height: 100%;
+  z-index: 1;
+}
+#sidebarCollapse{
+  position: absolute;
+  left: 1%;
+  font-size: 3rem;
+  border: 0;
+  color: #fff;
+  font-weight: 900;
+  top:-10px;
+}
+.sidebar-collapsed #sidebar {
+  margin-left: -250px; /* Adjust based on sidebar width */
+}
+.sidebar-collapsed .content {
+  margin-left: 0;
+}
+.content {
+  transition: all 0.3s;
+  margin-left: 211px;
+  overflow-x: hidden;
+  padding:1em;
+  z-index:-1;
+}
+.nav-container{
+  margin: 2em 0.5em;
+  row-gap: 2.5em;
+}
+.nav-icon{
+  margin-right: 0.4em;
 }
 .nav-item {/* Add padding to the items */
-    margin: 20px; /* Add margin to create space between items */
-    
-    
+width: 100%;
+
   }
 .nav-link{
     color: #333;
+    transition: background-color .3s;
 }
 .nav-link:hover {
-    background-color: #fafafa !important;
-    color: #025400 !important;
+    background-color: #ff9400  !important;
+    color: #fafafa !important;
   }
-  .flex-column li a{
-    background-color: #fafafa;
-    &:focus, &:active {
-      color: #025400;
-      background-color:  #fafafa;
-      -webkit-box-shadow: none;
-      -moz-box-shadow: none;
-      box-shadow: none;
-
-  }
-}
 .nav-pills > li > a.active {
-  background-color: #fafafa !important;
-  color: #025400 !important;
+  background-color: #ff9400  !important;
+  color: #fafafa !important;
 }
 
 
 /* Green color when active */
 .nav-link.dropdown-toggle:active,
 .nav-link.dropdown-toggle:focus {
-  color: #025400 !important; /* Green color when active */
+  background-color: #ff9400  !important;
+  color: #fafafa !important;
 }
-#main-content {
-    flex: 1;
-    padding: 16px;
-  }
-  #navbarDropdown{
+
+#navbarDropdown{
     font-weight: bold;
   }
+.flex-column li a{
+    background-color: #fafafa;
+    &:focus, &:active, &:hover {
+      color:#fafafa;
+      background-color: #ff9400;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
 
-  #eval{
-    padding: 10px;
-    box-sizing: border-box;
-    box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.2);
-    height: 140px;
+  }
+}
+hr{
+    border: none;
+    border-bottom: 2px solid #ff9400;
+  }
+#eval{
+  padding: 1em ;
+  box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.2);
+  height: 9em;
+    max-width: 550px;
+  }
+.button-container button{
+    width: 100%;
+    background-color: #ff9400;
+    transition: background-color .3s;
+  }
+  .button-container button:hover{
+    background-color: #2a9134 !important;
+    border-color: #2a9134
+  }
+  .custom-btn{
+    background-color: #ff9400;
+    color: white !important;
+    transition: background-color .3s;
+  }
+  .custom-btn:hover{
+    background-color: #2a9134 !important;
+    border-color: #2a9134
+  }
+  th{
+    color: #ffffff !important; 
+    background-color: #2a9134 !important;
   }
 
-  #profile{
-    padding: 10px;
-    box-sizing: border-box;
-    box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.2);
-    height: auto;
-    width: 350px;
-    float: left;
-    text-align: center;
+@media (max-width:900px) {
+    .header-title{
+      font-size: 0.9rem;
+     }
+     .subtitle{
+      font-size: 0.8rem;
+     }
+     .table th, .table td {
+      font-size: 0.75rem;
+    }
   }
+
+@media (max-width: 768px) {
+  #sidebar {
+        margin-left: -250px; /* Adjust based on sidebar width */
+    }
+  
+  .content {
+        margin-left: 0;
+    }
+  
+  .sidebar-collapsed #sidebar {
+        margin-left: 0;
+        z-index: 1;
+    }
+  .header-title{
+      font-size: 0.85rem;
+     }
+  .subtitle{
+      font-size: 0.7rem;
+     }
+  }
+
+  @media (max-width: 600px) {
+    #eval{
+      width: 330px;
+      height: 9em;
+    }
+    #eval h3{
+    font-size: 1.3rem;
+    }
+    #eval h4{
+    font-size: 1.2rem;
+    }
+    .title-container{
+      visibility: hidden;
+      opacity: 0;
+    }
+    #profile_name{
+      margin-right: 5em;
+      width: 100%;
+    }
+}
