--- a/Feedbacksystem/templates/pages/facultydashboard.html
+++ b/Feedbacksystem/templates/pages/facultydashboard.html
@@ -11,8 +11,10 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-  <link rel="stylesheet" href="{% static 'css/facultypage.css'%}">
+ 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet" href="{% static 'css/facultypage.css'%}">
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   
 
@@ -20,30 +22,38 @@
 
 <body>
   <div class="container-fluid" style="padding: 0;">
-    <div style="display: flex; align-items: center; background-color: #2a9134; margin: 0; width: 100%; height: 20vh;">
-        <a class="navbar-brand" style="color: #fafafa;" href="{% url 'home' %}" id="headerlogo">
-            <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="64px" height="64px" id="cvsulogo"> Feedback and Evaluation System 
-            <div class="subtitle">Cavite State University - Bacoor Campus</div>
+    <div class="header">
+      <button id="sidebarCollapse" class="btn">
+        <span class="material-symbols-outlined">
+          menu
+          </span>
+    </button>
+        <a class="navbar-brand" style="color: #fafafa;" href="{% url 'facultydashboard' %}" id="headerlogo">
+            <img src="{% static 'images/cvsulogo.png'%}" alt="Cavite State Univeristy Logo" width="70px" height="70px" id="cvsulogo"> 
+            
         </a>
-        <div style="margin-left: 40rem;">
+        <div class="title-container">
+          <div class="header-title">Feedback and Evaluation System </div>
+          <div class="subtitle">Cavite State University - Bacoor Campus</div>
+        </div>
+        <div class="profile-pic">
           {% if faculty.profile_picture %}
-          <img src="{{ faculty.profile_picture.url }}" alt="Profile Picture" width="60" style=" border-radius: 50%;">
+          <img src="{{ faculty.profile_picture.url }}" alt="Profile Picture" width="60" style=" border-radius: 50%; margin-right: 1em;">
           {% else %}
           <img src="{% static 'images/Default_avatar.webp' %}" alt="Default Profile Picture" width="60" style="margin-right: 1em; border-radius: 50%;" >
           {% endif %}
             <a href="{% url 'facultyprofile' %}" style="font-weight: 500;"> <p id="profile_name" style="color: #fafafa; display: inline-block;">{{ faculty.first_name }} {{ faculty.last_name }}</p> </a>
         </div>
     </div>
+    </div>
 </div>
 </div>
 </nav>
-  <div class="container-fluid">
-  <div class="row">
-    <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar lightsidebar"> 
-      <ul class="nav flex-column nav-pills">
+    <nav id="sidebar" class="sidebar lightsidebar"> 
+      <ul class="nav flex-column nav-pills nav-container">
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/facultydashboard' %} active {% endif %}" href="/facultydashboard">
-          <i class="bi bi-house-fill"></i> <b>HOME</b>    
+          <i class="bi bi-house-fill nav-icon"></i> <b>HOME</b>    
         
         
         </a>
@@ -51,13 +61,13 @@
        
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/facultyprofile' %} active {% endif %}" href="{% url 'facultyprofile' %}">
-            <i class="bi bi-person-lines-fill"> </i> <b>PROFILE</b>
+            <i class="bi bi-person-lines-fill nav-icon nav-icon"> </i> <b>PROFILE</b>
               </a>
         </li>
                
         <li class="nav-item dropdown">
           <button class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="bi bi-chat-left-fill"></i> EVALUATIONS
+            <i class="bi bi-chat-left-fill nav-icon"></i> EVALUATIONS
           </button>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{% url 'facultyfeedbackandevaluations' %}">SET</a>
@@ -65,26 +75,25 @@
       </li>
       <li class="nav-item">
         <a class="nav-link {% if request.path == '/faculty_events' %} active {% endif %}" href="faculty_events">
-          <i class="bi bi-calendar2-event-fill"></i></i> <b>EVENTS</b>    
+          <i class="bi bi-calendar2-event-fill nav-icon"></i></i> <b>EVENTS</b>    
       </a>
     </li>
 
         <li class="nav-item">
           <a class="nav-link" href="{% url 'studentlogout' %}">
-            <i class="bi bi-box-arrow-in-left"></i> <b>LOG OUT</b>
+            <i class="bi bi-box-arrow-in-left nav-icon"></i> <b>LOG OUT</b>
           </a>
       </li>
     </ul>
   </nav>
-  <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+  <main role="main" class="content">
     <!-- Main content area -->
     
-    <div class="container" style="padding:10px; margin-top:10px;">
       {% block header %}
     <div id="eval" class = "container">
       <h3>Academic Year: 2024-2025</h3>
       <h4>Semester: 1st</h4>
-      <h4>Student Evaluation for Teachers Status: Ongoing </h4>
+      <h4>Faculty Evaluation for Teachers Status: Ongoing </h4>
      </div>
     {% endblock header %}
    
@@ -116,6 +125,13 @@
  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
    
+  <script>
+    $(document).ready(function () {
+        $('#sidebarCollapse').on('click', function () {
+            $('body').toggleClass('sidebar-collapsed');
+        });
+    });
+</script>
    
 </body>
 
