--- a/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
@@ -3,40 +3,42 @@
 {% block title %}SET Evaluations{% endblock %}
 
 {% block header %}
-
-    <h2> SET Feedback and Evaluations </h2>
+<div class="container">
+    
+        <h2>Student Feedback and Evaluations</h2>
+        <hr>
+    
+    {% endblock header %}
     <hr>
-   
-{% endblock header %}
-<hr>
-{% block feature %}
-{% if avg_rating %}
-  <p><strong>Total Average Rating: {{ avg_rating|floatformat:1 }} </strong></p>
-{% endif %}
-<table class="table table-striped table-bordered table-responsive  ">
-    <tr>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">SUBJECT</th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">FACULTY</th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">AVERAGE RATING </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">OVERALL IMPRESSION </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">POLARITY </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">ACADEMIC YEAR </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">SEMESTER </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">OPTIONS </th>
-    </tr>
-    {% for i in teacher_evaluations %}
-    <tr>
-        <td>{{ i.section_subject_faculty.subjects }} </td>
-        <td>{{ i.section_subject_faculty.faculty }}</td>
-        <td>{{ i.average_rating }}</td>
-        <td>{{ i.comments }}</td>
-        <td>{{ i.predicted_sentiment }}</td>
-        <td>{{ i.academic_year }}</td>
-        <td>{{ i.semester }}</td>
-        <td><a class="nav-link" href="{% url 'view_evaluation_form' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button></td>
-    </tr>
-
-    {% endfor %}
-
-</table>
+    {% block feature %}
+    {% if avg_rating %}
+      <p><strong>Total Average Rating: {{ avg_rating|floatformat:1 }} </strong></p>
+    {% endif %}
+    <div class="table-responsive">
+        <table class="table table-bordered ">
+            <tr>
+                <th  scope="col">SUBJECT</th>
+                <th  scope="col">AVERAGE RATING </th>
+                <th  scope="col">OVERALL IMPRESSION </th>
+                <th  scope="col">POLARITY </th>
+                <th  scope="col">ACADEMIC YEAR </th>
+                <th  scope="col">SEMESTER </th>
+                <th  scope="col">OPTIONS </th>
+            </tr>
+            {% for i in teacher_evaluations %}
+            <tr>
+                <td>{{ i.section_subject_faculty.subjects }} </td>
+                <td>{{ i.average_rating }}</td>
+                <td>{{ i.comments }}</td>
+                <td>{{ i.predicted_sentiment }}</td>
+                <td>{{ i.academic_year }}</td>
+                <td>{{ i.semester }}</td>
+                <td><a href="{% url 'view_evaluation_form' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button></td>
+            </tr>
+        
+            {% endfor %}
+        
+        </table>
+    </div>
+</div>
 {% endblock feature %}
